Add some styling
Added some styling to the header, buttons, and call to action.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <div id="header">
-      <div class="top">
-        <div>Header Logo</div>
+      <div id="top">
+        <div id="logo">Header Logo</div>
         <div class="links">
           <div>header link one</div>
           <div>header link two</div>
           <div>header link three</div>
         </div>
       </div>
-      <div class="hero">
+      <div id="hero">
         <div class="left">
           <div class="title">This website is awesome</div>
           <div class="subtext">
@@ -74,6 +74,6 @@
       </div>
       <button>Sign up</button>
     </div>
-    <div class="footer">Copyright &copy; The Odin Project 2021</div>
+    <div id="footer">Copyright &copy; The Odin Project 2021</div>
   </body>
 </html>
