--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div id="top">
         <div id="logo">Header Logo</div>
         <div class="links">
-          <div>header link one</div>
-          <div>header link two</div>
-          <div>header link three</div>
+          <a href="./index.html">header link one</a>
+          <a href="./index.html">header link two</a>
+          <a href="./index.html">header link three</a>
         </div>
       </div>
       <div id="hero">
@@ -28,9 +28,9 @@
         <div class="right">this is a placeholder for an image</div>
       </div>
     </div>
-    <div id="section-one">
+    <div id="information-section">
       <div class="title">Some random information.</div>
-      <div class="images">
+      <div id="images">
         <div class="image-container">
           <div class="image"></div>
           <div class="subtext">
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="image-container">
-          <div class="imgage"></div>
+          <div class="image"></div>
           <div class="subtext">
             this is some subtext under an illustration or image
           </div>
@@ -57,22 +57,26 @@
         </div>
       </div>
     </div>
-    <div class="section-two">
-      <div class="quote">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's
-        just filling up space, or maybe people will actually read it. Who knows?
-        All I know is that it looks nice.
-      </div>
-      <div class="author">-Thor, God of Thunder</div>
-    </div>
-    <div id="section-three">
-      <div class="left">
-        <div class="title">Call to action! It's time!</div>
-        <div class="subtext">
-          Sign up for our product by clicking that button right over there!
+    <div id="quote-section">
+      <div id="quote">
+        <div id="quote-content">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
         </div>
+        <div id="author">-Thor, God of Thunder</div>
       </div>
-      <button>Sign up</button>
+    </div>
+    <div id="action-section">
+      <div id="call-to-action">
+        <div class="left">
+          <div class="title">Call to action! It's time!</div>
+          <div class="subtext">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <button id="sign-up-2">Sign up</button>
+      </div>
     </div>
     <div id="footer">Copyright &copy; The Odin Project 2021</div>
   </body>
